<?xml version="1.0"?>
<package format="2">
  <name>object_detection_apps</name>
  <version>0.0.0</version>
  <description>The object_detection_apps package</description>

  <maintainer email="silverbro007@icloud.com">testusuke</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
